# Parse-X

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/UI/: main.py  state.py
app/UI/components/: model_selector.py  pdf_uploader.py  result_viewer.py
app/UI/pages/: compare.py  extract.py
app/config/: config.py  config_loader.py
app/pipeline/: orchestrator.py
app/pipeline/stages/: enrich.py  merge.py  normalize.py  profile.py
app/providers/: base.py  docling_provider.py  fitz_provider.py  registry.py
app/utils/: logger.py
tests/: conftest.py
tests/providers/: test_docling_provider.py  test_fitz_providers.py
