[project]
name = "PARSE-X"
version = "0.1.0"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-benchmark",
    "pytest-mock",
    "structlog",
]


[tool.pytest.ini_options]
testpaths     = ["tests"]
python_files  = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts       = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
]
[tool.coverage.run]
source = ["app"]
omit   = ["tests/*"]